[package]
name = "blx_backend"
version = "0.1.0"
authors = ["Elliott Minns <elliott.minns@me.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "blx_backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-tls = "0.1"
postgres = { version = "0.15", features = ["with-openssl"] }
postgres-types= { version = "0.1.1", features = ["derive"] }
r2d2 = "0.8.8"
r2d2_postgres = "0.14"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
